fix bug in python tests
The latest version of swig 4.3 introduced a backwards compatibility
issue that is causing the python tests to fail

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     - bison
     - flex
     - make
-    - swig
+    - swig <4.2
     - pkg-config
   host:
     - python {{ python }}
@@ -97,7 +97,7 @@ outputs:
         - {{ compiler('c') }}
         - {{ stdlib("c") }}
         - make
-        - swig
+        - swig <4.2
       host:
         - python {{ python }}
         - setuptools
