--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,9 +32,6 @@ requirements:
 
 outputs:
   - name: dtc
-    files:
-      include:
-        - bin/*
     requirements:
       build:
         - {{ compiler('c') }}
@@ -47,6 +44,14 @@ outputs:
         - valgrind
       run:
         - {{ pin_subpackage("libfdt", max_pin="x.x") }}
+    files:
+      - bin/convert-dtsv0
+      - bin/dtc
+      - bin/dtdiff
+      - bin/fdtdump
+      - bin/fdtget
+      - bin/fdtoverlay
+      - bin/fdtput
     test:
       commands:
         - convert-dtsv0 --help
@@ -71,9 +76,6 @@ outputs:
         - GPL
         - README.license
   - name: pylibfdt
-    files:
-      include:
-        - lib/python*/site-packages/
     requirements:
       build:
         - {{ compiler('c') }}
@@ -88,6 +90,8 @@ outputs:
       run:
         - {{ pin_subpackage("libfdt", max_pin="x.x") }}
         - python {{ python }}
+    files:
+      - lib/python*/site-packages/**libfdt**
     test:
       imports:
         - libfdt
@@ -103,12 +107,6 @@ outputs:
         - BSD-2-Clause
         - README.license
   - name: libfdt
-    files:
-      include:
-        - include/
-        - lib/
-      exclude:
-        - lib/python*/site-packages/
     build:
       run_exports:
         - {{ pin_subpackage("libfdt", max_pin="x.x") }}
@@ -118,6 +116,12 @@ outputs:
         - {{ stdlib("c") }}
         - meson
         - pkg-config
+    files:
+      - include/fdt.h
+      - include/libfdt.h
+      - include/libfdt_env.h
+      - lib/libfdt.a
+      - lib/libfdt.so*
     test:
       commands:
         # tests/run_tests.sh -t libfdt depends on having dtc and the other binaries installed
