--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -92,6 +92,7 @@ outputs:
         - {{ pin_subpackage("libfdt", exact=True) }}
         - python {{ python }}
         - setuptools
+        - pip
         - yaml
       run:
         - {{ pin_subpackage("libfdt", max_pin="x.x") }}
