--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -78,7 +78,7 @@ outputs:
         - README.license
   - name: pylibfdt
     build:
-      script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+      script: python -m pip install . -vv --no-deps --no-build-isolation
     requirements:
       build:
         - {{ compiler('c') }}
