--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,9 +10,10 @@ source:
   sha256: 8f1486962f093f28a2f79f01c1fd82f144ef640ceabe555536d43362212ceb7c
   patches:
     - patches/0001-tests-sw_tree1.c-fix-unitialized-saveptr.patch
+    - patches/0002-pylibfdt-libfdt.i-fix-backwards-compatibility-of-ret.patch
 
 build:
-  number: 1
+  number: 2
   skip: true  # [win]
 
 requirements:
