--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -95,6 +95,15 @@ outputs:
     test:
       imports:
         - libfdt
+      # we can only due extended testing on linux due to GCC-specific assembly being used to
+      # generate the dtb files below
+      source_files:                # [linux]
+        - tests/                   # [linux]
+        - build/dtc                # [linux]
+        - build/tests/test_tree1.dtb     # [linux]
+        - build/tests/aliases.dtb        # [linux]
+      commands:  # [linux]
+        - "cd build/tests && NO_PYTHON=0 ../../tests/run_tests.sh -t pylibfdt"  # [linux]
     about:
       summary: 'Python Bindings for Linux Kernel Device Tree library (libfdt)'
       description: |
