--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -82,6 +82,8 @@ outputs:
       build:
         - {{ compiler('c') }}
         - {{ stdlib('c') }}
+        - cross-python_{{ target_platform }}    # [build_platform != target_platform]
+        - python {{ python }}                   # [build_platform != target_platform]
         - swig
       host:
         - {{ pin_subpackage("libfdt", exact=True) }}
